add salon controller